tests/fixtures/positive/i18n/LocaleDefaultForCurrency.kt
package test

import java.util.Currency
import java.util.Locale

class PriceFormatter {
    private val currency = Currency.getInstance(Locale.getDefault())
}
