tests/fixtures/negative/style/UnusedImport.kt
package style

import java.util.Date
import java.io.File

fun example() {
    val d = Date()
    val f = File("test.txt")
}
